@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*systemd-cron-1.3.3-r1 (01 Nov 2014)
+
+  01 Nov 2014; Martin Väth <martin@mvath.de>:
+  Add USE=etc-crontab. Bump to alert users
+
 *systemd-cron-1.3.3 (23 Oct 2014)
 
   23 Oct 2014; Martin Väth <martin@mvath.de>:
